--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "6.24.1",
     "babel-register": "^6.18.0",
@@ -76,6 +77,7 @@
     "webpack-manifest-plugin": "^1.1.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "material-design-lite": "^1.2.1",
     "preact": "^8.1.0",
     "preact-compat": "^3.9.4",
@@ -84,6 +86,7 @@
     "preact-router": "^2.4.5",
     "react-helmet": "^5.0.0",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.2.0"
   }
 }
