--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "safe-coins-wallet": "0.0.5",
     "vue": "^2.5.2",
     "vue-material": "^0.7.5",
     "vue-router": "^3.0.1",
