--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "safe-coins-wallet": "0.0.5",
     "vue": "^2.5.2",
+    "vue-fab": "^2.1.1",
     "vue-material": "^0.7.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0"
